# cat-detector

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NEXT_STEPS.md  README.md  ROADMAP.md  config.example.toml  pyproject.toml  sonar-project.properties
.agents/skills/tdd/: deep-modules.md
.beads/: metadata.json
.claude/: settings.json
.claude/agents/: code-reviewer.md  coder.md  test-runner.md
.claude/rules/: git-workflow.md  rust-style.md  testing.md
.claude/skills/capture/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/health/: SKILL.md
.claude/skills/render-diagram/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/sync/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/wrapup/: SKILL.md
.github/workflows/: ci.yml  deploy-docs.yml
docs/: Claude-Code-Guide.md  clip-detection.md  deployment-options.md  deployment.md  model-evaluation.md
examples/: model_benchmark.rs
prototype_images/: README.md
scripts/: benchmark_models.py  build-deb.sh  check_image_leakage.py  clip_utils.py  compute_doc_values.py  deploy-deb.sh  deploy.sh  doc_values_output.txt  generate_catness_direction.py  generate_clip_embeddings.py  generate_image_embeddings.py  generate_person_embedding.py  install-service.sh  remote-run.sh  remote-stop.sh  test-service.sh  test_clip_detection.py
scripts/packaging/: cat-detector.service  postinst.sh  prerm.sh
scripts/tests/: test_generate_image_embeddings.py
src/: app.rs  camera.rs  config.rs  detector.rs  lib.rs  main.rs  notifier.rs  recorder.rs  service.rs  session.rs  storage.rs  tracker.rs  watchdog.rs  web.rs
tests/: clip_integration_test.rs  integration_test.rs
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/: catness-direction.md  claude-code-guide.md  clip-detection.md  deployment-options.md  deployment.md  few-shot-detection.md  intro.md  model-evaluation.md  sessions.md
website/static/img/: clip-pipeline.dot  fewshot-pipeline.dot
