[package]
name = "cat-detector"
version = "1.0.0"
edition = "2021"
description = "A webcam-based cat detection application with notifications"
license = "MIT"

[features]
default = []
real-camera = ["v4l"]
web = ["axum", "tower-http", "tokio-stream"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Image processing
image = "0.25"

# Camera capture (optional)
v4l = { version = "0.14", optional = true }

# Web server (optional)
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
serde_json = "1"
bytes = "1"
http-body-util = "0.1"

# ML inference (ONNX)
ort = { version = "2.0.0-rc.9", default-features = false, features = ["load-dynamic"] }
ndarray = "0.16"

# System
libc = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async traits
async-trait = "0.1"

[dev-dependencies]
mockall = "0.13"
tempfile = "3"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }

[lib]
name = "cat_detector"
path = "src/lib.rs"

[[bin]]
name = "cat-detector"
path = "src/main.rs"
