[project]
authors = [{name = "Griswald Brooks", email = "griswald.brooks@gmail.com"}]
dependencies = [
    "numpy",
    "onnxruntime",
    "Pillow",
]
name = "cat-detector-scripts"
requires-python = ">= 3.11"
version = "0.1.0"

[project.optional-dependencies]
clip = [
    "torch",
    "clip @ git+https://github.com/openai/CLIP.git",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
cat-detector-scripts = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
clip = { features = ["clip"], solve-group = "default" }

[tool.pixi.tasks]
test-clip = "python scripts/test_clip_detection.py"

[tool.pixi.feature.clip.tasks]
generate-embeddings = "python scripts/generate_clip_embeddings.py"
